# codesys-api

./: .gitignore  AGENT.md  AGENTS.md  BASELINE.md  CLAUDE.md  CLI_USAGE.md  COLLABORATION_TEMPLATE.md  CONTINUE_TOMORROW.md  FILE_TRANSPORT_RETIREMENT.md  HTTP_SERVER.py  LICENSE  PERSISTENT_SESSION.py  README.md  STRATEGIC_PLAN.md  _repo_bootstrap.py  action_layer.py  api_key_store.py  app_runtime.py  codesys_cli.py  codesys_e2e_policy.py  codesys_process.py  engine_adapter.py  file_ipc.py  ironpython_script_engine.py  legacy_file_transport.py  named_pipe_transport.py  pyproject.toml  run_cli.bat  runtime_transport.py  script_executor.py  server_config.py  server_logic.py  session_transport.py  test_server.py  transport_result.py  windows_service.py
.github/workflows/: ci.yml  publish.yml  release-build.yml  verify-published-package.yml
docs/: BASELINE.md  BUG_HTTP_LIFECYCLE_STALL.md  CLAUDE.md  CLI_USAGE.md  CODESYS_BOUNDARY_CONTRACT.md  CONTINUE_TOMORROW.md  DEBUGGING_GUIDE.md  DEBUGGING_METHODOLOGY.md  HOST_SIDE_FILE_TRANSPORT_DELETION_PLAN.md  INSTALLATION_GUIDE.md  PACKAGING.md  PROJECT_SUMMARY.md  PUBLIC_RELEASE.md  PUBLISH_CHECKLIST.md  REAL_CODESYS_LESSONS.md  RELEASE.md  RELEASE_NOTES.md  STRATEGIC_PLAN.md  STRATEGIC_PLAN_V040.md  v040_AUDIT_T1_FIX.md  v040_DOCTOR_SPEC.md  v040_EVALUATION_DOCTOR_LOGIC.md  v040_EVALUATION_IMPLEMENTATION_T2.md  v040_PLAN_T1.md  v040_PLAN_T1_FIX.md  v040_PLAN_T2.md  v040_PLAN_T3.md  v040_TASK_DETAILS.json  v040_TASK_DOCTOR_LOGIC.md
docs/archive/: CONTINUE_TOMORROW.md  PUBLIC_RELEASE.md  test_mock_server_e2e.py.archived
docs/roles/: role_evaluator.md  role_execute.md  role_plan.md
examples/: ai_compile_and_report.py  ai_create_multiple_pous.py  ai_robust_startup.py
prompts/: audit_role.txt  execute_role.txt  plan_role.txt
scripts/: build_release.py  check_public_release.py  run_baseline.py  v040_orchestrator.py  verify_installed_package.py
scripts/debug/: check_codesys_options.bat  debug.bat  debug_codesys_path.py  debug_project_create.bat  diagnose_codesys.py  simplified_debug.py
scripts/dev/: console_test.bat  pure_test.bat  run_server.bat  run_simple_test.bat  run_test_server.bat  simple_test.bat  simple_test.py  start_server.bat  test_api_client.py  test_automation.py  test_project_create.bat  test_project_creation.py  test_server.py
scripts/manual/: api_test_suite.py  direct_codesys_persistent_host_probe.py  direct_codesys_runscript_probe.py  example_client.py  lifecycle_stress_probe.py  profile_launch_probe.py  real_build_thread_min_repro.py  real_cli_compile_error_probe.py  real_compile_error_matrix.py  real_compile_error_probe.py  real_compile_thread_boundary_probe.py  real_pou_code_roundtrip_probe.py  real_project_compile_probe.py  real_project_create_direct_raw_probe.py  real_project_create_raw_probe.py  real_project_open_raw_probe.py  real_project_skeleton_probe.py  real_syntax_compile_error_probe.py  run_real_codesys_e2e.py  simple_api_client.py
src/codesys_api/: __init__.py  action_layer.py  api_key_store.py  app_runtime.py  cli_entry.py  codesys_process.py  engine_adapter.py  help_text.py  http_server.py  ironpython_script_engine.py  named_pipe_transport.py  proven_primitives.py  runtime_paths.py  runtime_transport.py  script_executor.py  server_config.py  server_entry.py  session_transport.py  transport_result.py
tests/: conftest.py
tests/integration/: test_cli_doctor.py  test_file_transport_legacy_baseline.py  test_script_executor.py
tests/unit/: test_action_layer.py  test_api_key_store.py  test_app_runtime.py  test_baseline_documentation.py  test_cli_documentation.py  test_codesys_boundary_contract_documentation.py  test_codesys_cli.py  test_codesys_process.py  test_continue_tomorrow_documentation.py  test_doctor_logic.py  test_file_ipc.py  test_file_transport_legacy_unit.py  test_github_actions_workflows.py  test_http_server_project_compile.py  test_http_server_structure.py  test_http_server_system_info.py  test_http_server_system_logs.py  test_http_server_transport_boundary.py  test_ironpython_script_engine.py  test_manual_direct_codesys_persistent_host_probe.py  test_manual_direct_codesys_runscript_probe.py  test_manual_real_build_thread_min_repro.py  test_manual_real_cli_compile_error_probe.py  test_manual_real_codesys_e2e_runner.py  test_manual_real_compile_error_matrix.py  test_manual_real_compile_error_probe.py  test_manual_real_compile_thread_boundary_probe.py  test_named_pipe_transport.py  (+25 more)
(+6 files in other folders)
