[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesys-api"
version = "0.1.0"
description = "Windows-first CODESYS automation server and local CLI"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests",
    "pywin32",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
codesys-cli = "codesys_api.cli_entry:main"
codesys-api-server = "codesys_api.server_entry:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codesys_api = [
    "py.typed",
    "assets/PERSISTENT_SESSION.py",
    "assets/ScriptLib/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
    "mock: tests that exercise the mock HTTP server without a CODESYS installation",
    "codesys: tests that require a real CODESYS installation",
    "codesys_main: fast real-CODESYS acceptance path that minimizes cold starts",
    "codesys_slow: slower real-CODESYS runtime hardening checks",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
exclude = "^src/codesys_api/assets/"
files = [
    "_repo_bootstrap.py",
    "src/codesys_api",
    "codesys_cli.py",
    "HTTP_SERVER.py",
    "scripts/dev/test_server.py",
    "scripts/build_release.py",
    "scripts/run_baseline.py",
    "tests/integration",
    "tests/unit",
    "tests/e2e/codesys",
    "tests/e2e/mock",
]

[[tool.mypy.overrides]]
module = [
    "HTTP_SERVER",
    "PERSISTENT_SESSION",
    "test_server",
    "codesys_api.http_server",
    "codesys_api.server_entry",
]
ignore_errors = true
